--- a/src/stylesheets/about.scss
+++ b/src/stylesheets/about.scss
@@ -200,6 +200,13 @@ hr {
     width: 50vw;
 }
 
+.manifesto1 {
+    width: 50%;
+}
+
+
+
+
 @media screen and (max-width: 500px) {
     p, a {
         font-size: 20px;
@@ -289,6 +296,6 @@ hr {
     .tg1 {
         width: 6vw;
     }
-    
-    
-  }
+
+
+}
