--- a/src/stylesheets/basics.scss
+++ b/src/stylesheets/basics.scss
@@ -68,7 +68,7 @@ p, h1, h2, a {
       background-image: url(../images/zaglushka/tg.png);
       background-image: url(../images/zaglushka/vk.png);
       background-image: url(../images/zaglushka/dzen.png);
-      background-image: url(../images/habitat/habitat_article1/logotype.png);
+      background-image: url(../images/habitat/habitat_article1/logotype.svg);
     }
 
     &#bgJPG {
