--- a/src/stylesheets/habitat_articles.scss
+++ b/src/stylesheets/habitat_articles.scss
@@ -1,5 +1,6 @@
 .habitat_articles{
     body{
+      overflow-y: hidden;
         #cows::-webkit-scrollbar{
             background-color: none;
         }
@@ -17,8 +18,8 @@
         background-image: url(../images/habitat/habitat_article1/poisk.svg);
         background-color: #ffffff;
         color: white;
-        width: 1.9%;
-        height: 4%;
+        width: 1.9vw;
+        height: 1.9vw;
         margin-left: -2.4%;
         margin-top: 0.2%;
         position: absolute;
@@ -43,37 +44,43 @@
         padding-left: 2%;
       }
 }
-
-  
-
+   .article_cow{
+    position: relative;
+    margin-top: -1.5%;
+   }
   .green_line{
     z-index: -3;
     position: relative;
-    width: 100%;
-    margin-top: 0.3%;
+    margin-top: -2.5%;
+    width: 105.2%;
+    height: 101%;
+    margin-left: -2.5%;
     
   }
 
   .line{
     position: absolute;
-    margin-left: -2.7%;
-    width: 105.4%;
+    margin-left: -1%;
+    margin-top: -1.7%;
+    width: 101%;
     
   }
 
   .about_us{
     margin-top: -5.5%;
-    margin-left: 96.7%;
+    margin-left: 96%;
     margin-bottom: -2.1%;
   }
 
   .cows{
+    position: relative;
     display: block;
     z-index: 4;
-    width: 48%;
-    height: 92%;
+    width: 46%;
+    height: 38vw;
     overflow-y: scroll;
-    margin-top: 3.5%;
+    margin-top: 4.5%;
+    
   }
 
   .cow1{
@@ -84,7 +91,7 @@
   .cow_1{
     display: flex;
     margin-left: 53%;
-   margin-top: 1%;
+   margin-top: 0%;
   }
 
   .cow2{
@@ -108,25 +115,27 @@
    margin-top: 4.4%;
   }
   .cows::-webkit-scrollbar{
-    background-color: white;
-    width: 3px;
+    background-color: none;
+    width: 0.2vw;
+    
   }
   .cows::-webkit-scrollbar-thumb{
     background-color:#003E01;
   }
 
   .text_cows{
+    position: absolute;
     overflow-y: scroll;
-    height: 89%;
-    width: 49%;
-    margin-left: 52%;
-    margin-top: 2%;
+    height: 37vw;
+    width: 48%;
+    margin-left: 51%;
+    margin-top: 0%;
     margin-bottom: -42%;
   }
 
   .text_cows::-webkit-scrollbar{
-    background-color: white;
-    width: 3px;
+    background-color: none;
+    width: 0.2vw;
   }
 
 
@@ -139,9 +148,9 @@
   }
 
   .tags{
-    margin-left: 52%;
+    margin-left: 51%;
     font-style: oblique;
-    
+    position: relative;
     margin-bottom: -0.8%;
   }
 
@@ -149,12 +158,12 @@
     width: 6.5%;
     display: flex;
     margin-left: 93%;
-    margin-top: 1.9%;
+    margin-top: 2.1%;
     
   }
 
   .vk,.dzen{
-    width: 30%;
+    width: 26%;
     height: 30%;
   }
 
@@ -166,8 +175,8 @@
   }
   
   .tg{
-    width: 32%;
-    height: 32%;
+    width: 28%;
+    height: 28%;
   }
 
   .umwelt_podval{
@@ -179,6 +188,17 @@
     width: 3.4%;
     position: absolute;
   }
+ 
+
+  .navbar_line_green{
+    display: none;
+  }
+
+  .text_cows_mobile{
+    display: none;
+  }
+  
+  
 
 
 
