--- a/src/stylesheets/basics.scss
+++ b/src/stylesheets/basics.scss
@@ -64,9 +64,9 @@ p, h1, h2, a {
       background-image: url('../images/about/img5.png');
       background-image: url(../images/about/underline.png);
       background-image: url(../images/zaglushka/underline2.png);
-      background-image: url(../images/zaglushka/tg.png);
-      background-image: url(../images/zaglushka/vk.png);
-      background-image: url(../images/zaglushka/dzen.png);
+      background-image: url(../images/about/tg.png);
+      background-image: url(../images/about/vk.png);
+      background-image: url(../images/about/dzen.png);
       background-image: url(../images/habitat/habitat_article1/logotype.svg);
     }
 
