--- a/src/stylesheets/habitat_articles.scss
+++ b/src/stylesheets/habitat_articles.scss
@@ -17,11 +17,12 @@
         background-image: url(../images/habitat/habitat_article1/poisk.svg);
         background-color: #ffffff;
         color: white;
-        width: 1.9%;
+        width: 1vw;
         height: 4%;
         margin-left: -2.4%;
         margin-top: 0.2%;
         position: absolute;
+        cursor: pointer;
         
       }
       form input{
@@ -42,142 +43,146 @@
         color: #003E01;
         padding-left: 2%;
       }
+      .article_cow{
+        margin-top: -5.5%;
+      }
+        .green_line{
+          z-index: -3;
+          position: relative;
+          width: 100%;
+          margin-top: 0.3%;
+          
+        }
+      
+        .line{
+          position: absolute;
+          margin-left: -2.7%;
+          width: 105.4%;
+          margin-top: -2%;
+          
+        }
+      
+        .about_us{
+          margin-top: -5.5%;
+          margin-left: 96.7%;
+          margin-bottom: -2.1%;
+          cursor: pointer;
+        }
+      
+        .cows{
+      
+          display: block;
+          z-index: 4;
+          width: 48%;
+          height: 37vw;
+          overflow-y: scroll;
+          margin-top: 5%;
+        }
+      
+        .cow1{
+          width: 52%;
+          margin-top: -3%;
+        }
+      
+        .cow_1{
+          display: flex;
+          margin-left: 53%;
+         margin-top: 1%;
+        }
+      
+        .cow2{
+          width: 52%;
+          margin-left: 44%;
+          margin-top: -3%;
+        }
+        .cow_2{
+          display: flex;
+          margin-left: 97%;
+         margin-top: 4%;
+        }
+      
+        .cow3{
+          width: 52%;
+          margin-top: -3%;
+        }
+        .cow_3{
+          display: flex;
+          margin-left: 53%;
+         margin-top: 4.4%;
+        }
+        .cows::-webkit-scrollbar{
+          background-color: white;
+          width: 3px;
+        }
+        .cows::-webkit-scrollbar-thumb{
+          background-color:#003E01;
+        }
+      
+        .text_cows{
+          overflow-y: scroll;
+          height: 35vw;
+          width: 49%;
+          margin-left: 52%;
+          margin-top: 7.5%;
+          margin-bottom: -42%;
+        }
+      
+        .text_cows::-webkit-scrollbar{
+          background-color: none;
+          width: 3px;
+        }
+      
+      
+        .text_cows::-webkit-scrollbar-thumb{
+          background-color:#003E01;
+        }
+      
+        .text_cows_between{
+          right: 2%;
+        }
+      
+        .tags{
+          margin-left: 52%;
+          font-style: oblique;
+          
+          margin-bottom: -0.8%;
+        }
+      
+        .socials{
+          width: 20%;
+          display: flex;
+          margin-left: 82%;
+          margin-top: -0.5%;
+          
+          
+        }
+      
+        .tg{
+          display: block;
+          padding-left: -4%;
+          margin-top: -7%;
+        }
+        
+        .tg1{
+          width: 50%;
+      
+        }
+      
+        .umwelt_podval{
+          margin-top: -2%;
+        }
+      
+        .logotype{
+          margin-top: -6%;
+          width: 3.4%;
+          position: absolute;
+        }
+      
+        .text_cows_mobile{
+          display: none;
+        }
 }
-.article_cow{
-  margin-top: -5%;
-}
-  .green_line{
-    z-index: -3;
-    position: relative;
-    width: 100%;
-    margin-top: 0.3%;
-    
-  }
 
-  .line{
-    position: absolute;
-    margin-left: -2.7%;
-    width: 105.4%;
-    margin-top: -2%;
-    
-  }
-
-  .about_us{
-    margin-top: -5.5%;
-    margin-left: 96.7%;
-    margin-bottom: -2.1%;
-  }
-
-  .cows{
-
-    display: block;
-    z-index: 4;
-    width: 48%;
-    height: 36vw;
-    overflow-y: scroll;
-    margin-top: 5%;
-  }
-
-  .cow1{
-    width: 52%;
-    margin-top: -3%;
-  }
-
-  .cow_1{
-    display: flex;
-    margin-left: 53%;
-   margin-top: 1%;
-  }
-
-  .cow2{
-    width: 52%;
-    margin-left: 44%;
-    margin-top: -3%;
-  }
-  .cow_2{
-    display: flex;
-    margin-left: 97%;
-   margin-top: 4%;
-  }
-
-  .cow3{
-    width: 52%;
-    margin-top: -3%;
-  }
-  .cow_3{
-    display: flex;
-    margin-left: 53%;
-   margin-top: 4.4%;
-  }
-  .cows::-webkit-scrollbar{
-    background-color: white;
-    width: 3px;
-  }
-  .cows::-webkit-scrollbar-thumb{
-    background-color:#003E01;
-  }
-
-  .text_cows{
-    overflow-y: scroll;
-    height: 35vw;
-    width: 49%;
-    margin-left: 52%;
-    margin-top: 7.5%;
-    margin-bottom: -42%;
-  }
-
-  .text_cows::-webkit-scrollbar{
-    background-color: white;
-    width: 3px;
-  }
-
-
-  .text_cows::-webkit-scrollbar-thumb{
-    background-color:#003E01;
-  }
-
-  .text_cows_between{
-    right: 2%;
-  }
-
-  .tags{
-    margin-left: 52%;
-    font-style: oblique;
-    
-    margin-bottom: -0.8%;
-  }
-
-  .social{
-    width: 3%;
-    display: flex;
-    margin-left: 80%;
-    margin-top: 2.4%;
-    
-  }
-
-  .tg{
-    display: block;
-    width: 20%;
-  }
-  
-  .tg1{
-    width: 30%;
-    height: 30%;
-  }
-
-  .umwelt_podval{
-    margin-top: -5%;
-  }
-
-  .logotype{
-    margin-top: -6%;
-    width: 3.4%;
-    position: absolute;
-  }
-
-  .text_cows_mobile{
-    display: none;
-  }
 
 
 
