--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -135,6 +135,282 @@ body.index {
   100%{margin-left: -738%;}
 }
 
+@media screen and (min-width: 1920px){
+  .zaglushka{
+      
+      .social{
+          margin-top: 30%;
+      }
+
+      #my-form{
+          margin-top: 15%;
+      }
+
+      .shapka{
+          margin-top: 17%;
+      }
+
+      
+
+      
+  } 
+  }
+  @media screen and (min-width: 1440px)and (max-width: 1919px){
+      
+  }
+  @media screen and (min-width: 1366px)and (max-width: 1439px){
+      .zaglushka{
+      
+          .social{
+              margin-top: 30%;
+          }
+  
+          #my-form{
+              margin-top: 15%;
+          }
+  
+          .shapka{
+              margin-top: 1%;
+          }
+  
+          
+  
+          
+      } 
+  }
+      
+  @media screen and (min-width: 1024px)and (max-width: 1365px){
+      .zaglushka{
+      
+          .social{
+              margin-top: 45%;
+          }
+  
+          #my-form{
+              margin-top: 13%;
+          }
+  
+          .shapka{
+              margin-top: 2%;
+          }
+          
+      } 
+  }
+  
+  @media screen and (min-width: 768px)and (max-width: 1023px){
+      .zaglushka{
+          .underline2{
+              width: 17%;
+              margin-top: -14.5%;
+          }
+          #my-form{
+              margin-left: 22%;
+              margin-top: 3%;
+          }
+          
+          a{
+              font-size: 4vw;
+              
+          }
+          p{
+              font-size: 3.2vw;
+          }
+          .hello{
+              margin-left: 25%;
+              margin-top: 2%;
+          }
+          .intro{
+              margin-left:25%;
+              margin-top: 23%;
+          }
+
+          .underline2{
+              margin-left: 44%;
+          }
+          #my-form-button{ 
+              font-size: 3.2vw;
+              height: 4.5vw;
+              width: 16vw;
+          } 
+
+          form input{
+              font-size: 3.2vw;
+              width: 31vw;
+              margin-left: -25%;
+              height: 4.5vw;
+          }
+
+          .animation_rostok{
+              width: 30%;
+              margin-top: -44%;
+              height: 90vw;
+          }
+          .social{
+              width: 30%;
+              margin-top: 80%;
+              margin-left: 70%;
+
+              .tg{
+                  width: 77%;
+                  
+               }
+               .tg1{
+                  width: 100%;
+                  
+               }
+          }
+
+          #form_text{
+              margin-left: -25%;
+          }
+      } 
+  }
+
+  @media screen and (min-width: 414px)and (max-width: 767px){
+      .zaglushka{
+          .underline2{
+              width: 17%;
+              margin-top: -14.5%;
+          }
+          #my-form{
+              margin-left: 22%;
+              margin-top: 3%;
+          }
+          
+          a{
+              font-size: 6vw;
+              
+          }
+          p{
+              font-size: 4.4vw;
+          }
+          .hello{
+              margin-left: 26%;
+              margin-top: 1%;
+          }
+          .intro{
+              width: 80%;
+              margin-left:26%;
+              margin-top: 23%;
+          }
+
+          .underline2{
+              width: 25%;
+              margin-left: 60%;
+              margin-top: -29%;
+          }
+          #my-form-button{ 
+              font-size: 4.4vw;
+              height: 7vw;
+              width: 25vw;
+          } 
+
+          form input{
+              font-size: 4.4vw;
+              width: 37vw;
+              margin-left: -25%;
+              height: 7vw;
+          }
+
+          .animation_rostok{
+              width: 50%;
+              margin-top: -76%;
+              margin-left: -15%;
+              height: 90vw;
+          }
+          .social{
+              width: 50%;
+              margin-top: 20%;
+              margin-left: 60%;
+
+              .tg{
+                  width: 75%;
+                  
+               }
+               .tg1{
+                  width: 107%;
+                  
+               }
+          }
+
+          #form_text{
+              margin-top: 110%;
+              margin-left: -25%;
+          }
+      }
+  }
+  @media screen and (min-width: 360px)and (max-width: 413px){ 
+      .zaglushka{
+          #my-form{
+              margin-left: 22%;
+              margin-top: 3%;
+          }
+          
+          a{
+              font-size: 6vw;
+              
+          }
+          p{
+              font-size: 4.4vw;
+          }
+          .hello{
+              margin-left: 26%;
+              margin-top: 1%;
+          }
+          .intro{
+              width: 80%;
+              margin-left:26%;
+              margin-top: 23%;
+          }
+
+          .underline2{
+              width: 25%;
+              margin-left: 62%;
+              margin-top: -30%;
+          }
+          #my-form-button{ 
+              font-size: 4.4vw;
+              height: 7vw;
+              width: 25vw;
+          } 
+
+          form input{
+              font-size: 4.4vw;
+              width: 37vw;
+              margin-left: -25%;
+              height: 7vw;
+          }
+
+          .animation_rostok{
+              width: 50%;
+              margin-top: -76%;
+              margin-left: -15%;
+              height: 90vw;
+          }
+          .social{
+              width: 50%;
+              margin-top: 20%;
+              margin-left: 60%;
+
+              .tg{
+                  width: 75%;
+                  
+               }
+               .tg1{
+                  width: 107%;
+                  
+               }
+          }
+
+          #form_text{
+              margin-top: 110%;
+              margin-left: -25%;
+          }
+      }
+  }
+  @media screen and (min-width: 0px)and (max-width: 359px){ 
+  }
+
 
 
 
