--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -10,133 +10,64 @@ body.index {
   }
 }
 
-.zaglushka{
-  .shapka{
-    position: relative;
-  }
-  p{
-    padding-top: 10%;
-    padding-bottom: 2%;
-    margin-left: 0%;
-  }
-
-  .intro{
-    margin-left: 11%;
-  }
-  .hello{
-    position: absolute;
-    margin-top: 6%;
-    margin-left: 11%;
-    cursor: pointer;
-  }
+.main{
   body {
     overflow: hidden;
   }
   a{
     margin-top: 10%;
-    font-size: 2vw;
+    
   }
   
 
-  #my-form{
-    margin-top: -15%;
-    margin-left: 48%;
-    height: 2vw;
-  }
-
-  #my-form-status{
-    margin-top: -8%;
-  }
-  #my-form-button{
-    border-radius: none;
-    border-style:solid ;
-    border-color:#003E01;
-    background-color: #003E01;
-    color: white;
-    width: 9vw;
-    height: 2.6vw;
-    cursor: pointer;
+  #forma{
+    position: absolute;
     
-  }
-  form input{
-    border-radius: none ;
-    border-style: solid;
-    box-shadow: none;
-    border-color:#003E01;
-    background-color: #ffffff;
-    width: 20vw;
-    height: 2.6vw;
-  }
+}
 
-  ::placeholder{
-    color: #003E01;
-    padding-left: 2%;
-  }
+}
+#my-form-button{
+border-radius: none;
+border: none;
+background-image: url(../images/habitat/habitat_article1/poisk.svg);
+background-color: #ffffff;
+color: white;
+width: 1.9vw;
+height: 4%;
+margin-left: -2.4%;
+margin-top: 1.3%;
+position: absolute;
+cursor: pointer;
 
-  .animation_rostok{
-    margin-top: -23%;
-    margin-left: -2%;
-    position: absolute;
-    width: 16%;
-    height: 160%;
-    overflow: hidden;
-    
-  }
+}
+form input{
+margin-left: 0%;
+border-radius: 0deg;
+border-width: 2px;
+border-style: solid;
+box-shadow: none;
+border-color:#003E01;
+background-color: #ffffff;
+width: 18vw;
+height: 2.6vw;
+margin-top: 1%;
+}
 
-  .rostok{
-    justify-content: start;
-    position: absolute;
-    width: 1090%;
-    margin-top:1%;
-    animation: rostok 1.6s steps(1) infinite ;
-  }
+::placeholder{
+color: #003E01;
+padding-left: 2%;
+}
 
-  .underline2{
-    position: relative;
-    width: 7.5%;
-    margin-top: -7.5%;
-    margin-left: 21%;
-  }
-  .underline22{
-    position: absolute;
-    margin-top: -8%;
-    width: 100%;
   
-  }
 
-  .social{
-    width: 10%;
-    display: flex;
-    position: relative;
-    margin-top: 24%;
-    margin-bottom: -10%;
-    margin-left: 85%;
-    
-  }
+  
 
-  .tg{
-    width: 40%;
-    height: 40%;
-  }
 
-}
 
-@keyframes rostok {
-  0%{margin-left: 20%;}
-  10%{margin-left: -60%;}
-  20%{margin-left: -144%;}
-  30%{margin-left: -218%;}
-  40%{margin-left: -300%;}
-  50%{margin-left: -388%;}
-  60%{margin-left: -490%;}
-  70%{margin-left: -613%;}
-  80%{margin-left: -738%;}
-  90%{margin-left: -738%;}
-  100%{margin-left: -738%;}
-}
+  
 
 @media screen and (min-width: 1920px){
-  .zaglushka{
+  .main{
       
       .social{
           margin-top: 30%;
