converted to webp

--- a/src/stylesheets/about.scss
+++ b/src/stylesheets/about.scss
@@ -53,7 +53,7 @@ h2 {
 }
 
 .img1 div{
-    background-image: url(../images/about/img1.jpg);
+    background-image: url(../images/about/img1.webp);
 }
 
 .img1 img {
