--- a/src/stylesheets/about.scss
+++ b/src/stylesheets/about.scss
@@ -1,330 +1,4 @@
-body {
-    overflow-x: hidden;
-}
-
-img {
-    border-radius: 10px;
-}
-
-.section {
-    width: 100%;
-    display: flex;
-    justify-content: flex-end;
-    align-items: flex-end;
-}
-
-.section h2, .section p {
-    width: 45vw;
-    text-align: right;
-    display: block;
-    padding-right: 60px;
-    padding-top: 20px;
-}
-
-.logotypee{
-    margin-top: -4.5vw;
-    width: 10vw;
-    height: 10vw;
-}
-
-.section2 {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: start;
-}
-
-.section2 p {
-    width: 35vw;
-    text-align: right;
-    display: block;
-    padding-right: 60px;
-    padding-top: 20px;
-}
-
-
-
-p, h1, h2, a {
-    color: #003E01;
-}
-
-h2 {
-    font-size: 40px;
-}
-
-.img1 div{
-    background-image: url(../images/about/img1.webp);
-}
-
-.img1 img {
-    width: 50vw;
-    height: auto;
-    padding-left: 60px;
-    padding-top: 100px;
-}
-
-hr {
-    margin-top: 100px;
-    height: 0px;
-    border-top: 2px solid #003E01;
-}
-
-
-
-.big_container {
-    padding-top: 100px;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: top;
-}
-    
-      
-    
-.description h2, .description p {
-    text-align: left;
-    display: block;
-    padding-right: 60px;
-}
-     
-    
-.description {
-    padding-left: 10px;
-    border-left: 2px solid #003E01;
-}
-    
-
-.item1 {
-    display: flex;
-    justify-content: flex-start;
-    align-items: start;
-}
-
-.item2 {
-    width: 30vw;
-}
-
-.item22 {
-    width: 50vw;
-}
-
-
-.item_pic{
-    background-size: 40vw;
-    width: 40vw;
-}
-
-
-.item_pic img{
-    width: 100%;
-}
-
-.item_pic2 {
-    background-size: 20vw;
-    width: 30vw;
-}
-
-.item_pic2 img {
-    width: 100%;
-}
-
-.container {
-    margin-top: 100px;
-    width: 100%;
-    height: auto;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
-
-.container2 {
-    margin-top: 100px;
-    width: 100%;
-    height: auto;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
-
-.primer{
-    display: flex;
-    flex-direction: column;
-}
-
-.underline {
-    padding-left: 30%;
-}
-
-.manifesto {
-    padding-left: 60px;
-    width: 100vw;
-    margin-top: 100px;
-    display: flex;
-    justify-content: space-around;
-    align-items: start;
-}
-
-
-.social {
-    width: 20%;
-    padding-top: 30px;
-    display: flex;
-    flex-direction: row;
-    padding-bottom: 30px;
-}
-
-.tg {
-    margin-right: 20px;
-}
-
-.tg1 {
-
-    width: 3vw;
-}
-
-.history_pic{
-    background-size: 25vw;
-    width: 25vw;
-}
-
-.history_pic img{
-    background-size: 25vw;
-    width: 25vw;
-}
-
-.container1 {
-    margin-top: 100px;
-    width: 100%;
-    height: auto;
-    display: flex;
-    justify-content: space-around;
-    align-items: start;
-}
-
-.historyy {
-    padding-left: 60px;
-    width: 50vw;
-}
-
-.manifesto1 {
-    width: 40%;
-}
-
-
-
-@media screen and (max-width: 500px) {
-
-    body {
-        padding: 0;
-        overflow-x: hidden;
-    }
-
-    p, a {
-        font-size: 20px;
-    }
-
-    h1, h2 {
-        font-size: 25px;;
-    }
-
-    .section h2, .section p {
-        width: 100vw;
-        padding-top: 20px;
-    }
-
-    .section{
-        padding-top: 20px;
-        padding-right: 0px;
-    }
-
-    .section22{
-        display: block;
-        padding-right: 20px;
-    }
-
-    .section p, .section h2{
-        width: 100vw;
-        padding-top: 20px;
-        padding-right: 0;
-    }
-    
-    .section2 p {
-        width: 80vw;
-    }
-
-    .img1 img {
-        width: 80vw;
-        padding-left: 30px;
-        padding-top: 50px;
-    }
-
-    hr {
-        margin-top: 50px;
-    }
-
-    .container {
-        padding-top: 0px;
-        flex-direction: column;
-    }
-
-    .item_pic{
-        background-size: 80vw;
-        width: 80vw;
-    }
-    
-    .item_pic2 {
-        background-size: 40vw;
-        width: 60vw;
-    }
-
-    .underline {
-        padding-left: 20%;
-    }
-
-    .container2 {
-        flex-direction: column-reverse;
-    }
-
-    .manifesto_bg {
-        display: none;
-    }
-
-    .manifesto {
-        width: 100vw;
-        margin-top: 0vw;
-        padding-top: 50px;
-        padding-left: 10px;
-        flex-direction: column;
-    }
-
-    .container1 {
-        flex-direction: column;
-    }
-
-    .historyy {
-        width: 100vw;
-    }
-
-    .history_pic img{
-        margin-top: 0px;
-        background-size: 50vw;
-        width: 50vw;
-    }
-
-    .logotypee{
-        margin-top: -10vw;
-        width: 20vw;
-        height: 20vw;
-    }
-
-
-    .tg1 {
-        width: 6vw;
-    }
-
-    .manifesto1 {
-        width: 90%;
-    }
-
+.about_us {
+    background-color: white;
+    background-image: none;
 }
