--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -19,329 +19,166 @@ body.index {
     
   }
   
-
-  #forma{
-    position: absolute;
-    
 }
 
-}
-#my-form-button{
-border-radius: none;
-border: none;
-background-image: url(../images/habitat/habitat_article1/poisk.svg);
-background-color: #ffffff;
-color: white;
-width: 1.9vw;
-height: 4%;
-margin-left: -2.4%;
-margin-top: 1.3%;
-position: absolute;
-cursor: pointer;
 
-}
-form input{
-margin-left: 0%;
-border-radius: 0deg;
-border-width: 2px;
-border-style: solid;
-box-shadow: none;
-border-color:#003E01;
-background-color: #ffffff;
-width: 18vw;
-height: 2.6vw;
-margin-top: 1%;
+body {
+    background-image: url(/src/images/index/background.gif);
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center; 
 }
 
-::placeholder{
-color: #003E01;
-padding-left: 2%;
+.menu{
+    padding: 0%;
+    margin: 0%;
+    left: 0;
 }
 
-  
+.menu p,.menu li a, .menu li p{
+    width: fit-content;
+    background-color: #B0EB00;
+    color: black;
+    text-decoration: none;
+    line-height: 1.5;
+}
 
-  
+a{
+    color: black;
+}
 
+.table p, .table a{
+    color: white;
+}
 
+input {
+    background-color: transparent !important;
+    border: 2px solid #B0EB00 !important;
+}
 
-  
+input::placeholder {
+    color: #B0EB00;
+}
 
-@media screen and (min-width: 1920px){
-  .main{
-      
-      .social{
-          margin-top: 30%;
-      }
+.table {
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr repeat(5, 1fr); 
+    grid-template-rows: repeat(6, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+}
 
-      #my-form{
-          margin-top: 15%;
-      }
+.table div {
+    border: 1.5px solid #B0EB00; 
+    display: block;
+    width: 100%;
+    height: auto;
+    overflow: visible;
+}
 
-      .shapka{
-          margin-top: 17%;
-      }
-
-      
-
-      
-  } 
-  }
-  @media screen and (min-width: 1440px)and (max-width: 1919px){
-      
-  }
-  @media screen and (min-width: 1366px)and (max-width: 1439px){
-      .zaglushka{
-      
-          .social{
-              margin-top: 30%;
-          }
-  
-          #my-form{
-              margin-top: 15%;
-          }
-  
-          .shapka{
-              margin-top: 1%;
-          }
-  
-          
-  
-          
-      } 
-  }
-      
-  @media screen and (min-width: 1024px)and (max-width: 1365px){
-      .zaglushka{
-      
-          .social{
-              margin-top: 45%;
-          }
-  
-          #my-form{
-              margin-top: 13%;
-          }
-  
-          .shapka{
-              margin-top: 2%;
-          }
-          
-      } 
-  }
-  
-  @media screen and (min-width: 768px)and (max-width: 1023px){
-      .zaglushka{
-          .underline2{
-              width: 17%;
-              margin-top: -14.5%;
-          }
-          #my-form{
-              margin-left: 22%;
-              margin-top: 3%;
-          }
-          
-          a{
-              font-size: 4vw;
-              
-          }
-          p{
-              font-size: 3.2vw;
-          }
-          .hello{
-              margin-left: 25%;
-              margin-top: 2%;
-          }
-          .intro{
-              margin-left:25%;
-              margin-top: 23%;
-          }
-
-          .underline2{
-              margin-left: 44%;
-          }
-          #my-form-button{ 
-              font-size: 3.2vw;
-              height: 4.5vw;
-              width: 16vw;
-          } 
-
-          form input{
-              font-size: 3.2vw;
-              width: 31vw;
-              margin-left: -25%;
-              height: 4.5vw;
-          }
-
-          .animation_rostok{
-              width: 30%;
-              margin-top: -44%;
-              height: 90vw;
-          }
-          .social{
-              width: 30%;
-              margin-top: 80%;
-              margin-left: 70%;
-
-              .tg{
-                  width: 77%;
-                  
-               }
-               .tg1{
-                  width: 100%;
-                  
-               }
-          }
-
-          #form_text{
-              margin-left: -25%;
-          }
-      } 
-  }
-
-  @media screen and (min-width: 414px)and (max-width: 767px){
-      .zaglushka{
-          .underline2{
-              width: 17%;
-              margin-top: -14.5%;
-          }
-          #my-form{
-              margin-left: 22%;
-              margin-top: 3%;
-          }
-          
-          a{
-              font-size: 6vw;
-              
-          }
-          p{
-              font-size: 4.4vw;
-          }
-          .hello{
-              margin-left: 26%;
-              margin-top: 1%;
-          }
-          .intro{
-              width: 80%;
-              margin-left:26%;
-              margin-top: 23%;
-          }
-
-          .underline2{
-              width: 25%;
-              margin-left: 60%;
-              margin-top: -29%;
-          }
-          #my-form-button{ 
-              font-size: 4.4vw;
-              height: 7vw;
-              width: 25vw;
-          } 
-
-          form input{
-              font-size: 4.4vw;
-              width: 37vw;
-              margin-left: -25%;
-              height: 7vw;
-          }
-
-          .animation_rostok{
-              width: 50%;
-              margin-top: -76%;
-              margin-left: -15%;
-              height: 90vw;
-          }
-          .social{
-              width: 50%;
-              margin-top: 20%;
-              margin-left: 60%;
-
-              .tg{
-                  width: 75%;
-                  
-               }
-               .tg1{
-                  width: 107%;
-                  
-               }
-          }
-
-          #form_text{
-              margin-top: 110%;
-              margin-left: -25%;
-          }
-      }
-  }
-  @media screen and (min-width: 360px)and (max-width: 413px){ 
-      .zaglushka{
-          #my-form{
-              margin-left: 22%;
-              margin-top: 3%;
-          }
-          
-          a{
-              font-size: 6vw;
-              
-          }
-          p{
-              font-size: 4.4vw;
-          }
-          .hello{
-              margin-left: 26%;
-              margin-top: 1%;
-          }
-          .intro{
-              width: 80%;
-              margin-left:26%;
-              margin-top: 23%;
-          }
-
-          .underline2{
-              width: 25%;
-              margin-left: 62%;
-              margin-top: -30%;
-          }
-          #my-form-button{ 
-              font-size: 4.4vw;
-              height: 7vw;
-              width: 25vw;
-          } 
-
-          form input{
-              font-size: 4.4vw;
-              width: 37vw;
-              margin-left: -25%;
-              height: 7vw;
-          }
-
-          .animation_rostok{
-              width: 50%;
-              margin-top: -76%;
-              margin-left: -15%;
-              height: 90vw;
-          }
-          .social{
-              width: 50%;
-              margin-top: 20%;
-              margin-left: 60%;
-
-              .tg{
-                  width: 75%;
-                  
-               }
-               .tg1{
-                  width: 107%;
-                  
-               }
-          }
-
-          #form_text{
-              margin-top: 110%;
-              margin-left: -25%;
-          }
-      }
-  }
-  @media screen and (min-width: 0px)and (max-width: 359px){ 
-  }
+.table div:nth-child(6n + 1) {
+    border: none; 
+}
 
 
+.div1 p, .div7 p, .div13 p, .div19 p, .div25 p, .div31 p {
+    transform: rotate(-90deg);
+}
+
+.main_screen{
+    display: flex;
+    justify-content: flex-start;
+}
+
+.div2 img, .div16 img, .div27 img {
+    width: 100%;
+}
+
+.gradient {
+    padding: 0;
+    margin: 0;
+    position: fixed;
+    top: 0;
+    left: 0;
+    pointer-events: none;
+}
+
+.chascha {
+    color: white;
+    font-size: 60px;
+    margin-top: -90px;
+    margin-bottom: 30px;
+    letter-spacing: -6px;
+    font-weight: 700;
+}
+
+#my-form {
+    margin-top: 100px;
+    margin-left: 450px;
+    margin-bottom: 100px;
+}
+
+#form_text {
+    color: #B0EB00;
+}
+
+.email {
+    width: 400px;
+}
+
+#my-form-button {
+    color: #B0EB00;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+    .table {
+        grid-template-columns: repeat(5, 1fr); 
+    }
+
+    .table div:nth-child(6n) {
+        display: none;
+    }
+
+    #my-form {
+        margin-top: 50px;
+        margin-left: 10px;
+        margin-bottom: 100px;
+    }
+
+    .email {
+        width: 300px;
+    }
+}
 
 
+@media screen and (max-width: 767px) {
+    .table {
+        grid-template-columns: repeat(4, 1fr); 
+    }
+
+    .table div:nth-child(6n), 
+    .table div:nth-child(6n - 1) {
+        display: none; 
+    }
+
+    .menu p,.menu li a, .menu li p{
+        font-size: 20px;
+    }
+
+
+    #my-form {
+        margin-top: 50px;
+        margin-left: 10px;
+        margin-bottom: 100px;
+    }
+
+    .table a, .table p{
+        font-size: 16px;
+    }
+
+    .email {
+        width: 200px;
+    }
+}
