--- a/src/stylesheets/about.scss
+++ b/src/stylesheets/about.scss
@@ -1,4 +1,20 @@
 .about_us {
     background-color: white;
-    background-image: none;
+    background-image: url(../images/about/big_gradient.webp);
+}
+
+.chascha1 {
+    font-size: 15vw;
+    color: white;
+    font-weight: 700;
+    letter-spacing: -20px;
+    text-align: center;
+    margin-top: -9.5vw;
+}
+
+.chascha2 {
+    font-size: 7vw;
+    color: white;
+    letter-spacing: -8px;
+    text-align: center;
 }
